--- a/idea/customFields/customFieldManager.component.html
+++ b/idea/customFields/customFieldManager.component.html
@@ -33,7 +33,8 @@
       </ion-label>
       <ion-input
         type="text"
-        [value]="theField.name.translate(currentLanguage, languages)"
+        [value]="theField.name[currentLanguage]"
+        [placeholder]="theField.name[languages.default]"
         (ionChange)="theField.name[currentLanguage] = $event.detail.value"
       ></ion-input>
     </ion-item>
@@ -44,7 +45,8 @@
       </ion-label>
       <ion-input
         type="text"
-        [value]="theField.description.translate(currentLanguage, languages)"
+        [value]="theField.description[currentLanguage]"
+        [placeholder]="theField.description[languages.default]"
         (ionChange)="theField.description[currentLanguage] = $event.detail.value"
       ></ion-input>
     </ion-item>
