Bug-fix offline

--- a/idea/offline/offlineManager.component.html
+++ b/idea/offline/offlineManager.component.html
@@ -88,7 +88,13 @@
       >
         !
       </ion-badge>
-      <ion-icon slot="end" size="small" name="checkmark" color="success" *ngIf="!r.synchronizing && !error"></ion-icon>
+      <ion-icon
+        slot="end"
+        size="small"
+        name="checkmark"
+        color="success"
+        *ngIf="!r.synchronizing && !r.error"
+      ></ion-icon>
       <ion-spinner slot="end" name="dots" *ngIf="r.synchronizing"></ion-spinner>
     </ion-item>
   </ion-list>
