Fixed offline color

--- a/idea/offline/offlineBar.component.scss
+++ b/idea/offline/offlineBar.component.scss
@@ -2,7 +2,7 @@
   ion-toolbar {
     height: 25px !important;
     --min-height: auto !important;
-    --background: var(--ion-color-quiteDark);
+    --background: var(--ion-color-dark);
     ion-text {
       font-size: 0.8rem !important;
       color: white;
