--- a/idea/offline/offlineManager.component.html
+++ b/idea/offline/offlineManager.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="quiteDark">
+  <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{ 'IDEA.OFFLINE.OFFLINE_MANAGER' | translate }}
     </ion-title>
