--- a/idea/offline/offlineManager.component.scss
+++ b/idea/offline/offlineManager.component.scss
@@ -9,7 +9,7 @@
     font-weight: bold;
     text-transform: uppercase;
     font-size: 0.75em;
-    color: var(--ion-color-quiteDark);
+    color: var(--ion-color-dark);
     p {
       padding-top: 5px;
       white-space: normal;
