--- a/idea/select/suggestions.component.html
+++ b/idea/select/suggestions.component.html
@@ -93,5 +93,8 @@
         </ion-text>
       </ion-label>
     </ion-item>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event.target)">
+      <ion-infinite-scroll-content> </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   </ion-list>
 </ion-content>
