Added address and contacts & fixed select

--- a/idea/resourceCenter/RCConfigurator.component.html
+++ b/idea/resourceCenter/RCConfigurator.component.html
@@ -6,5 +6,6 @@
   [lines]="lines"
   [hideIdFromUI]="true"
   [disabled]="!editMode"
+  [avoidAutoSelection]="true"
   (select)="$event ? setFolder($event?.value) : null"
 ></idea-select>
