--- a/idea/teams/teams.page.scss
+++ b/idea/teams/teams.page.scss
@@ -1,4 +1,12 @@
 .teamsList {
   max-width: 500px;
   margin: 0 auto;
+  margin-top: 10px;
+  p {
+    margin: 10px 10px 20px 10px;
+  }
+  ion-item {
+    --background: white;
+    --border-color: #eee;
+  }
 }
