--- a/idea/checker/checks.component.scss
+++ b/idea/checker/checks.component.scss
@@ -2,4 +2,10 @@
   .check {
     --background: white;
   }
+  .circle {
+    height: 100%;
+    width: 100%;
+    background-color: #555;
+    border-radius: 50%;
+  }
 }
