Added support to Google in Agenda

--- a/idea/agenda/agenda.component.html
+++ b/idea/agenda/agenda.component.html
@@ -9,7 +9,7 @@
       <idea-checker
         class="calendarsChecks"
         [data]="calendarsChecks"
-        [placeholder]="t.instant('IDEA.AGENDA.CALENDARS')"
+        [placeholder]="t.instant('IDEA.AGENDA.CALENDARS.CALENDARS')"
         [lines]="'none'"
         [allText]="t.instant('IDEA.AGENDA.ALL_CALENDARS')"
         [noneText]="t.instant('IDEA.AGENDA.NO_CALENDARS')"
