Suscriptions and other fix

--- a/idea/subscription/subscription.component.html
+++ b/idea/subscription/subscription.component.html
@@ -82,7 +82,7 @@
           expand="block"
           fill="clear"
           color="medium"
-          (click)="extBrowser.openLink(t.instant('IDEA.AUTH.TERMS_AND_CONDITIONS_URL'))"
+          (click)="extBrowser.openLink(t.instant('IDEA_VARIABLES.TERMS_AND_CONDITIONS_URL'))"
         >
           {{ 'IDEA.AUTH.TERMS_AND_CONDITIONS' | translate }}
         </ion-button>
@@ -94,7 +94,7 @@
           expand="block"
           fill="clear"
           color="medium"
-          (click)="extBrowser.openLink(t.instant('IDEA.AUTH.PRIVACY_POLICY_URL'))"
+          (click)="extBrowser.openLink(t.instant('IDEA_VARIABLES.PRIVACY_POLICY_URL'))"
         >
           {{ 'IDEA.AUTH.PRIVACY_POLICY' | translate }}
         </ion-button>
