--- a/idea/teams/teams.page.scss
+++ b/idea/teams/teams.page.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   margin-top: 10px;
   > p {
-    margin: 10px 10px 20px 10px;
+    margin: 0 10px 20px 10px;
   }
   ion-item {
     --background: white;
