Improved mobile UX agenda

--- a/idea/agenda/agenda.component.html
+++ b/idea/agenda/agenda.component.html
@@ -1,11 +1,30 @@
 <ion-grid class="agenda" fixed>
   <ion-row class="ion-align-items-center titleRow">
-    <ion-col class="ion-text-right ion-align-self-center" [size]="12" [sizeSm]="2" [sizeLg]="3">
+    <ion-col class="ion-text-right ion-align-self-center" [size]="10" [sizeSm]="2" [sizeLg]="3">
       <ion-button (click)="addAppointment()">
         {{ 'COMMON.ADD' | translate }}
       </ion-button>
     </ion-col>
-    <ion-col class="ion-text-right ion-align-self-center" [size]="12" [sizeSm]="5" [sizeLg]="5">
+    <ion-col
+      class="ion-text-right ion-align-self-center"
+      [size]="2"
+      [pushSm]="8"
+      [sizeSm]="2"
+      [pushLg]="8"
+      [sizeLg]="1"
+    >
+      <ion-button fill="clear" color="dark" [disabled]="loadingAppointments" (click)="syncExternalCalendars()"
+        ><ion-icon name="refresh"></ion-icon
+      ></ion-button>
+    </ion-col>
+    <ion-col
+      class="ion-text-right ion-align-self-center"
+      [size]="6"
+      [pullSm]="2"
+      [sizeSm]="5"
+      [pullLg]="1"
+      [sizeLg]="5"
+    >
       <idea-checker
         class="calendarsChecks"
         [data]="calendarsChecks"
@@ -18,7 +37,14 @@
         (change)="loadAppointmentsBasedOnVisibileCalendars()"
       ></idea-checker>
     </ion-col>
-    <ion-col class="ion-text-right ion-align-self-center" [size]="6" [sizeSm]="3" [sizeLg]="3">
+    <ion-col
+      class="ion-text-right ion-align-self-center"
+      [size]="6"
+      [pullSm]="2"
+      [sizeSm]="3"
+      [pullLg]="1"
+      [sizeLg]="3"
+    >
       <ion-select
         interface="popover"
         class="calendarModeSelect"
@@ -29,11 +55,6 @@
         <ion-select-option value="week">{{ 'IDEA.AGENDA.WEEK' | translate }}</ion-select-option>
         <ion-select-option value="day">{{ 'IDEA.AGENDA.DAY' | translate }}</ion-select-option>
       </ion-select>
-    </ion-col>
-    <ion-col class="ion-text-right ion-align-self-center" [size]="6" [sizeSm]="2" [sizeLg]="1">
-      <ion-button fill="clear" color="dark" [disabled]="loadingAppointments" (click)="syncExternalCalendars()"
-        ><ion-icon name="refresh"></ion-icon
-      ></ion-button>
     </ion-col>
   </ion-row>
   <ion-row class="ion-align-items-center subTitleRow">
@@ -117,7 +138,7 @@
         [dayviewNormalEventTemplate]="eventTemplate"
         [dayviewAllDayEventTemplate]="eventTemplate"
         [queryMode]="'remote'"
-        [lockSwipes]="!platform.is('mobile')"
+        [lockSwipes]="true"
         [step]="30"
         (onCurrentDateChanged)="onCurrentDateChanged($event)"
         (onRangeChanged)="onRangeChanged($event)"
