--- a/idea/signature/signature.component.html
+++ b/idea/signature/signature.component.html
@@ -9,6 +9,9 @@
       {{ 'IDEA.SIGNATURE.SIGNATURE' | translate }}
     </ion-title>
     <ion-buttons slot="end">
+      <ion-button [title]="t.instant('IDEA.SIGNATURE.CLEAR_SIGNATURE')" (click)="undo()">
+        <ion-icon name="undo" slot="icon-only"></ion-icon>
+      </ion-button>
       <ion-button [title]="t.instant('IDEA.SIGNATURE.SAVE_SIGNATURE')" (click)="save()">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
